# vlog-pipeline

./: .gitignore  README.md  pyproject.toml  pytest.ini  review-report.md  stress-report.md
docs/: DESIGN.md
graphify-out/: .graphify_labels.json  GRAPH_REPORT.md  graph.html  graph.json  manifest.json
graphify-out/2026-07-08/: .graphify_labels.json  GRAPH_REPORT.md  graph.json  manifest.json
graphify-out/2026-07-10/: GRAPH_REPORT.md
graphify-out/cache/: stat-index.json
runs/day30-vlog/: edit-report.md  optimize.md  plan.md  report.html  review-report.md  review-state.json  state.json
runs/stage-test/: captions.srt  edit-decisions.json  ingest-report.json
runs/stress/: stress-results-v1-prefix.md  stress-results.md
studio/: index.html  package-lock.json  package.json  vite.config.js
studio/src/: App.jsx  CaptionEditor.jsx  CutList.jsx  ExportModal.jsx  Library.jsx  Player.jsx  SettingsDrawer.jsx  ShortcutOverlay.jsx  Studio.jsx  Timeline.jsx  api.js  app.css  main.jsx  state.js  tokens.css  util.js
testdata/stress/: alternation.gt.json  boundary_silence.gt.json  dense_filler.gt.json  exit_reenter.gt.json  handheld.gt.json  low_contrast.gt.json  music.gt.json
testdata/work-clip/: concat.txt  sec0.aiff  sec1.aiff  sec2.aiff  sec3.aiff  sec4.aiff  sec5.aiff
tests/: test_croptrack_smoothing.py  test_cutlist.py  test_review.py  test_silence_threshold.py  test_stress_scenarios.py
tools/: make_test_clip.py
vlog_pipeline/: cli.py  config.py  export.py  ffmpeg.py  llm.py  report.py  review.py  state.py  stress.py  studio_server.py
(+63 files in other folders)
